--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ migrate_working_dir/
 .pub/
 /build/
 
+# API keys and environmental variables
+envvar.env
+
 # Symbolication related
 app.*.symbols
 
