--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  #packages from https://pub.dev/packages =
+  flutter_dotenv: ^5.0.2            #to protect API and critical values
+  url_launcher: ^6.2.6              #to launch URLs and get API
+  http: ^1.2.1                      #to consume HTTP resources
+  google_fonts: ^6.2.1              #to directly use googlefonts instead of download-import
+  icons_flutter: ^0.0.4             #to obtain a greater variety of icons
+  intl: ^0.19.0                     #to get the date and time
+  win32: ^5.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,6 +71,12 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+assets:
+  - images/         #To load images
+  - envvar.env      #To load the environment variables
+  - google_fonts/   #To load fonts
+  - audios/         #To load audio sources
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
